--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
             border: 2px solid #0F1C3F;
             border-radius: 50%;
             box-shadow: 10px 5px 0 0 rgba(15, 28, 63, 0.125);
-            height: 25px;
-            width: 25px;
+            height: 45px;
+            width: 45px;
             margin: 5px;
         }
           .circl {
@@ -20,8 +20,8 @@
               border: 2px solid #0F1C3F;
               border-radius: 50%;
               box-shadow: 10px 5px 0 0 rgba(15, 28, 63, 0.125);
-              height: 25px;
-              width: 25px;
+              height: 45px;
+              width: 45px;
               margin: 5px;
           }
 .krug{
@@ -29,22 +29,25 @@
   justify-content: space;
   background-color:brown;
   padding: 10px;
-  width: 400px;
+  width: 600px;
+  height: 100px;
 }
 .imena{
   background-color: aqua;
   padding: 10px;
-  font-size: 25px;
+  font-size: 45px;
   font-family:'Segoe UI';
 }
 .pp{
   display: flex;
   justify-content: space;
+  margin-top: 300px;
+  margin-left: 55px;
 }
 .och{
   background-color: aquamarine;
-  padding: 10px;
-  font-size: 25px;
+  padding: 12px;
+  font-size: 45px;
   font-family:'Segoe UI';
 }
 button{
@@ -58,7 +61,7 @@ button:active{
   </style>
 </head>
 <body>
-<div class="pp">
+<div class="pp" position="center">
   <div class="imena">
    player 1 
    <p>player 2</p>
@@ -91,14 +94,18 @@ button:active{
   <div class="circl"></div>
   </div>
 </div>
+
 <div class="och">
   <span id="score">0</span>
   <p><span id="nobro">0</span></p>
 </div>
+
 </div>
 
+<center>
 <button onclick="incrementScore()">Предать</button>
 <button onclick="decrementScore()">Сотрудничать</button>
+</center>
 
 <script>
   let score = 0;
