--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
   font-family:'Segoe UI';
 }
 button{
-  padding: 10px 10px;
-  border-radius: 20px;
-  margin: 5px;
+  font-size: 40px;
+  padding: 10px;
+  margin: 10px;
 }
 button:active{
   background-color:#fcfcfc;
